--- a/doc/HISTORY
+++ b/doc/HISTORY
@@ -4,6 +4,17 @@ Netpbm.
 CHANGE HISTORY 
 --------------
 
+23.03.25 BJH  Release 10.73.43
+
+              jpegtopnm: Many fixes to -dumpexif.  Always broken.
+              (-dumpexif was new in Netpbm 9.18 (September 2001))
+
+              pamtopng: fix -chroma option: always rejected.  Always broken.
+              pamtopng was new in Netpbm 10.70 (June 2015).
+
+              pnmtopng: fix -rgb option: always rejected.  Always broken
+              -rgb was new in Netpbm 10.30 (October 2005).
+
 22.12.31 BJH  Release 10.73.42
 
               ppmtompeg: Fix crash with resize option because of invalid
