--- a/doc/HISTORY
+++ b/doc/HISTORY
@@ -4,7 +4,13 @@ Netpbm.
 CHANGE HISTORY 
 --------------
 
-not yet  BJH  Release 10.86.41
+24.06.28 BJH  Release 10.86.42
+
+              libnetpbm: Fix double free crash when memory allocation via
+              REALLOCARRAY fails.  Introduced in Netpbm 10.40 (September
+              2007).
+
+24.03.30 BJH  Release 10.86.41
 
               infotopam: fix incorrect output -- columns always in wrong
               place.  Always broken.  (infotopam was new in Netpbm 10.22 (May
